service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: default

spec:
  ports:
    - name: web
      port: 80
      targetPort: 3000

  selector:
    app: demo-app
